# continuous_time

./: .gitignore  PERF.md  README.md  ctrnn2.py  ctrnn_bptt.py  ctrnn_hybrid_bptt_rtrl.py  env.py  feed_thread.py  graph_thread.py  main.py  when_to_unfold.md
hoard_dir/: ctrnn_bad_v0.1.py
proto/: ctrnn.py  ctrnn2.py  env.py  graph_thread.py  main.py  middleman.py
situations/: Cargo.toml
situations/src/: bake_off.rs  churn_one.rs  lib.rs  main.rs  match_wave.rs  util.rs
tiny/: Cargo.toml  tiny.cfg.json
tiny/examples/: balance.rs  sinusoidal.rs
tiny/src/: api.rs  config.rs  lib.rs  main.rs  network.rs  neuron.rs  rx_tx.rs
tiny/src/beta/: hash.rs  power.rs
tiny/src/net/: dyn_tau.rs  mod.rs
tiny/src/networks/: async_power.rs  bulk_power.rs  hash.rs  mod.rs  network.rs  ssm.rs  upower.rs
waitress/: Cargo.toml  noisy-waitress.cfg.json  waitress.cfg.json
waitress/src/: config.rs  main.rs  util.rs  waitress.rs
