[package]
name = "tiny"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
getopts = "0.2.21"
ndarray = { version = "0.16.0", features = ["serde"] }
ndarray-rand = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["v4"] }
zmq = "0.10.0"
